force-app/main/default/objects/CustomRating_Global_Setting__c/CustomRating_Global_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Custom Rating Global Setting</label>
</CustomObject>