force-app/main/default/objects/CustomRating_Global_Setting__c/fields/Custom_Rating_2_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Custom_Rating_2_Percentage__c</fullName>
    <inlineHelpText>This percentage will be applied to identify the Rating 2 records.</inlineHelpText>
    <label>Custom Rating 2 Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>