force-app/main/default/objects/CustomRating_Global_Setting__c/fields/Custom_Rating_field__c.field-meta.xml
<CustomField>
    <fullName>Custom_Rating_Field__c</fullName>
    <inlineHelpText>This field will hold the values of actual ranking results</inlineHelpText>
    <label>Custom Rating Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>