force-app/main/default/objects/CustomRating_Global_Setting__c/fields/Custom_Rating_Group_Field__c.field-meta.xml
<CustomField>
    <fullName>Custom_Rating_Group_Field__c</fullName>
    <inlineHelpText>This field is the criteria based on which custom rating is determined.</inlineHelpText>
    <label>Custom Rating Group Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>