force-app/main/default/objects/CustomRating_Global_Setting__c/fields/Rating_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Rating_Criteria__c</fullName>
    <inlineHelpText>This field is where you enter your criteria using field API names and the conditions that will be used with them. This field uses SOQL formatting so your criteria string must be formatted like that. An example of how this might look is
E.g. Type !=&apos;Prospect&apos; AND RecordType.Name =&apos;Customer&apos;</inlineHelpText>
    <label>Rating Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>