force-app/main/default/objects/CustomRating_Global_Setting__c/fields/Rating_Rollup_Sort_Order_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Rating_Rollup_Sort_Order_Criteria__c</fullName>
    <inlineHelpText>Mention here the ORDER BY portion of the Custom Rating to apply a sorting order for records on the Target Object. E.g. AnnualRevenue Desc, CreatedDate Desc</inlineHelpText>
    <label>Rating Rollup Sort Order Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>