force-app/main/default/objects/CustomRating_Global_Setting__c/fields/Rating_Value_2__c.field-meta.xml
<CustomField>
    <fullName>Rating_Value_2__c</fullName>
    <inlineHelpText>Mention the actual value to be assigned for Rating 2</inlineHelpText>
    <label>Rating Value 2</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>