force-app/main/default/objects/CustomRating_Global_Setting__c/fields/Rating_Value_3__c.field-meta.xml
<CustomField>
    <fullName>Rating_Value_3__c</fullName>
    <inlineHelpText>Mention the actual value to be assigned for Rating 3</inlineHelpText>
    <label>Rating Value 3</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>