force-app/main/default/objects/CustomRating_Global_Setting__c/fields/Use_RollupBatch_for_Rollup_Field__c.field-meta.xml
<CustomField>
    <fullName>Use_RollupBatch_for_Rollup_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Make this field True to use other custom settings or False to use the values in the rating rollup field.</inlineHelpText>
    <label>Use RollupBatch for Rollup Field</label>
    <type>Checkbox</type>
</CustomField>